tests/invalid/test_may_export_body.err_exp2
test_may_export_body.m:033: Error: the [38;5;226m`may_export_body' attribute[39;49m on the
test_may_export_body.m:033:   foreign_proc [38;5;203mcontradicts[39;49m the [38;5;226m`no_inline' pragma[39;49m
test_may_export_body.m:033:   on the predicate.
